Next Release
============

Features:
  * Support for OpenSSL 1.1.1 and its implementation of TLS v1.3.
  * New function mongoc_stream_should_retry.

Bug fixes:

  * mongoc_collection_update_many and mongoc_collection_delete_many would fail
    with the URI option retryWrites=true.
  * In a transaction, the driver now properly ignores the readConcern configured
    on a client, database, or collection: only the mongoc_transaction_opt_t's
    readConcern is used.
  * Remove timestamp from uninstall scripts to permit reproducible build.
  * Setting mongoc_ssl_opt_t.pem_file or ca_file to a bad file path caused a
    hang with Darwin SSL.
  * Fix the ENABLE_SASL cmake option:
    * Remove unnecessary GSSAPI value. It was equivalent to specifying ENABLE_SASL=CYRUS.
    * ENABLE_SASL=AUTO now correctly chooses SSPI on Windows instead of CYRUS.

mongo-c-driver 1.13.1
=====================

Bug fixes:

  * Add missing header files to the release tarball to fix compilation when
    configuring with ENABLE_SASL=GSSAPI.


mongo-c-driver 1.13.0
=====================

It is my pleasure to announce the MongoDB C Driver 1.13.0.

Features:

  * Report a new error code, MONGOC_ERROR_GRIDFS_CORRUPT, when a chunk larger
    than chunkSize is detected. Before, the driver had crashed with an assert.
  * Restructure of install directory. All mongoc headers are under mongoc/
    and all bson headers are under bson/. The preferred way of including the
    headers are mongoc/mongoc.h and bson/bson.h respectively.
    Forwarding headers in the root are provided for backwards compatibility.
  * The default CMake build type had been unspecified, now it is RelWithDebInfo.
  * Support LibreSSL 2.7+.

Bug fixes:

  * mongoc_collection_replace_one is now a correctly exported symbol.
  * Fix multiple issues with readConcern and writeConcern inheritance.
  * Fix rare crash with mongodb+srv URIs on Windows.
  * mongoc_gridfs_create_file_from_stream ignored errors while writing chunks